Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103923

GCC 12: failure to build from source [<QtBase>]

XMLWordPrintable

    • Team B Foundation Sprint 60

      Current dev fails to compile with GCC 12 in various places (may be related to -sanitize address -sanitize undefined:

      • -Werror=array-bounds:
        • qbrush.cpp
        • qfontengine.cpp
        • qendian_p.h (QTBUG-103927)
        • qpaintengine_raster.cpp

        For Gerrit Dashboard: QTBUG-103923
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: